--- a/src/styles/utils/colors.scss
+++ b/src/styles/utils/colors.scss
@@ -1,6 +1,8 @@
 $text-primary: rgba(29, 31, 34, 1);
-
+$text-secondary: #FFFFFF;
 
 $button-text-primary: rgba(29, 31, 34, 1);
 $button-text-secondary: rgba(255, 255, 255, 1);
 $button-text-active: rgba(94, 206, 123, 1);
+
+$cart-amount-background: #1D1F22;
