--- a/src/styles/components/error.scss
+++ b/src/styles/components/error.scss
@@ -1,6 +1,6 @@
 .error {
-  min-width: 100vw;
-  min-height: 100vh;
+  width: 100%;
+  height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
