fech: added categories filters

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -27,5 +27,6 @@
 #woman-category:checked ~ #women-category-label, 
 #men-category:checked ~ #men-category-label, 
 #kids-category:checked ~ #kids-category-label{
-  color: green;
+  color: #5ECE7B;
+  border-bottom: 2px solid #5ECE7B;
 }
