--- a/src/styles/utils/font.scss
+++ b/src/styles/utils/font.scss
@@ -124,7 +124,7 @@
   font-weight: 500;
   line-height: 29px;
   letter-spacing: 0em;
-  text-align: right;
+  text-align: left;
 
   color: $text-primary;
 
