--- a/src/styles/utils/colors.scss
+++ b/src/styles/utils/colors.scss
@@ -5,4 +5,9 @@ $button-text-primary: rgba(29, 31, 34, 1);
 $button-text-secondary: rgba(255, 255, 255, 1);
 $button-text-active: rgba(94, 206, 123, 1);
 
+$out-of-text-color: #8D8F9A;
+
+$catalog-card-background: #FFFFFF;
+
+
 $cart-amount-background: #1D1F22;
