--- a/src/styles/utils/colors.scss
+++ b/src/styles/utils/colors.scss
@@ -8,6 +8,7 @@ $button-text-active: rgba(94, 206, 123, 1);
 $out-of-text-color: #8D8F9A;
 
 $catalog-card-background: #FFFFFF;
+$catalog-card-cart-button-background: #5ECE7B;
 
 
 $cart-amount-background: #1D1F22;
