fech: add dinamic pages generation for products

--- a/src/styles/components/catalog.scss
+++ b/src/styles/components/catalog.scss
@@ -53,7 +53,7 @@
         z-index: 1;
 
         &:hover {
-          @include default-hover;
+          @include cart-hover;
         }
       }
       
