--- a/src/styles/components/currency-dropdown.scss
+++ b/src/styles/components/currency-dropdown.scss
@@ -28,6 +28,7 @@
       left: -55px;
       opacity: 0;
       position: absolute;
+      z-index: 100;
       overflow: hidden;
       min-width: 110px;
       background-color: #FFFFFF;
