--- a/src/styles/utils/hovers.scss
+++ b/src/styles/utils/hovers.scss
@@ -8,6 +8,13 @@
 
 @mixin currency-hover {
   cursor: pointer;
+  transition: 0.2s;
   color: $button-text-secondary;
   background-color: $button-text-active;
+}
+
+@mixin cart-hover {
+  cursor: pointer;
+  transition: 0.2s;
+  transform: scale(1.4);
 }
