--- a/src/styles/utils/font.scss
+++ b/src/styles/utils/font.scss
@@ -90,7 +90,8 @@
 }
 
 @mixin item-description {
-  font-family: "Roboto";
+  font-family: "Raleway";
+  font-style: "Medium";
   font-size: 16px;
   font-weight: 400;
   line-height: 26px;
