fech: complete item page layout

--- a/src/styles/utils/buttons.scss
+++ b/src/styles/utils/buttons.scss
@@ -1,3 +1,10 @@
 @import './colors.scss';
 @import './font.scss';
 
+@mixin add-to-cart-button {
+  height: 50px;
+  width: 300px;
+  border: 0;
+  color: $button-text-secondary;
+  background-color: $button-add-to-cart-background;
+}
