--- a/src/styles/components/currency-dropdown.scss
+++ b/src/styles/components/currency-dropdown.scss
@@ -24,9 +24,9 @@
     }
 
     &__currencies {
+      height: 0;
       top: 30px;
       left: -55px;
-      opacity: 0;
       position: absolute;
       z-index: 100;
       overflow: hidden;
@@ -50,5 +50,5 @@
 }
 
 #currencies-checkbox:checked ~ #currency-container {
-  opacity: 1;
+  height: auto;
 }
