--- a/src/styles/components/item-page.scss
+++ b/src/styles/components/item-page.scss
@@ -2,44 +2,73 @@
 
 .item-page {
   display: flex;
+  justify-content: space-between;
   padding: 80px 0;
 
-  &__gallery {
-    height: 600px;
-    overflow: scroll;
-    display: flex;
+  @include desktop {
     flex-direction: column;
-    align-items: center;
+  }
 
-    &__item {
-      width: 80px;
-      margin-bottom: 30px;
-      &:hover {
-        cursor: pointer;
+  &__images {
+    height: 600px;
+    display: flex;
+    justify-content: space-between;
+    &__gallery {
+      overflow: scroll;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin-right: 80px;
+  
+      &__item {
+        width: 80px;
+        margin-bottom: 30px;
+  
+        &:hover {
+          @include default-hover;
+        } 
+      }
+    }
+    
+    &__image {
+      max-height: 550px;
+      width: 500px;
+      object-fit: cover;
+
+      @include desktop {
+        width: 100%;
       }
     }
   }
-  
-  &__image {
-    height: 600px;
-    object-fit: cover;
-  }
 
   &__info {
-    min-height: 600px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    min-height: 550px;
+    max-width: 400px;
+    display: flex;
+    flex-direction: column;
 
-    &__brand {
-      @include item-bold-title;
-    }
-
-    &__name {
-      @include item-title;
+    &__title {
+      margin-bottom: 30px;
+      &__brand {
+        @include item-bold-title;
+        margin-bottom: 10px
+      }
+  
+      &__name {
+        @include item-title;
+      }
     }
 
     &__attributes {
+      margin-bottom: 30px;
+
+      &__name {
+        @include item-attributes-title;
+        margin-bottom: 10px;
+      }
       &__items {
         display: flex;
 
@@ -51,12 +80,34 @@
           align-items: center;
           justify-content: center;
           border: 1px solid #1D1F22;
+
+          &:hover {
+            @include default-hover;
+          } 
         }
       }
     }
 
+    &__add-to-cart {
+      @include add-to-cart-button;
+      margin-bottom: 30px;
+
+      &:hover {
+        @include default-hover;
+      } 
+    }
+
+    &__price {
+      @include item-price;
+      margin-bottom: 30px;
+    }
+
     &__description {
       @include item-description;
+    }
+
+    &__description > * {
+      margin-bottom: 15px;
     }
   }
 }
