--- a/src/styles/utils/buttons.scss
+++ b/src/styles/utils/buttons.scss
@@ -8,3 +8,18 @@
   color: $button-text-secondary;
   background-color: $button-add-to-cart-background;
 }
+
+@mixin cart-preview-view-bag-button {
+  padding: 10px 20px;
+  @include button-text;
+  background-color: transparent;
+  border: 2px solid #000000;
+}
+
+@mixin cart-preview-check-out-button {
+  padding: 10px 20px;
+  @include button-text;
+  border: 0;
+  color: $text-secondary;
+  background-color: $button-check-out-background;
+}
