--- a/src/styles/utils/colors.scss
+++ b/src/styles/utils/colors.scss
@@ -7,6 +7,8 @@ $button-text-active: rgba(94, 206, 123, 1);
 
 $button-add-to-cart-background: rgba(94, 206, 123, 1);
 
+$button-check-out-background: rgba(94, 206, 123, 1);
+
 $out-of-text-color: #8D8F9A;
 
 $catalog-card-background: #FFFFFF;
