--- a/src/styles/components/currency-dropdown.scss
+++ b/src/styles/components/currency-dropdown.scss
@@ -16,6 +16,7 @@
 
     &__checkbox {
       transform: rotate(90deg);
+      padding: 0px 10px;
   
       &:hover {
         @include default-hover;
@@ -24,7 +25,7 @@
     }
 
     &__currencies {
-      height: 0;
+      max-height: 0;
       top: 30px;
       left: -55px;
       position: absolute;
@@ -50,5 +51,5 @@
 }
 
 #currencies-checkbox:checked ~ #currency-container {
-  height: auto;
+  max-height: 500px;
 }
