--- a/src/styles/components/cart-item.scss
+++ b/src/styles/components/cart-item.scss
@@ -8,21 +8,54 @@
   &__info {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
+
+    &__brand, &__name {
+      @include card-title;
+    }
+
+    &__price {
+      @include card-price;
+    }
   }
   &__preview {
     display: flex;
-    max-width: 105px;
     height: 137px;
 
     &__amount {
       display: flex;
       flex-direction: column;
       justify-content: space-between;
+      padding-right: 10px;
+
+      &__change-amount {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 25px;
+        width: 25px;
+        height: 25px;
+        border: 2px solid $text-primary;
+        user-select: none;
+
+        &:hover {
+          cursor: pointer;
+        }
+      }
+
+      &__amount {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 20px;
+        width: 25px;
+        height: 25px;
+      }
     }
 
     &__image {
-      width: 100%;
       height: 100%;
+      width: 105px;
       object-fit: cover;
     }
   }
