--- a/src/styles/components/cart-preview.scss
+++ b/src/styles/components/cart-preview.scss
@@ -25,7 +25,7 @@
     top: 50px;
     right: 0px;
     max-height: 0px;
-    width: 350px;
+    width: 400px;
     transition: .5s;
     background-color: #FFFFFF;
     filter: drop-shadow(0px 4px 35px rgba(168, 172, 176, 0.19));
@@ -33,7 +33,8 @@
     &__content-container {
       padding: 25px;
       &__title {
-        @include card-title;
+        @include item-attributes-title;
+        margin-bottom: 25px;
       }
   
       &__items {
@@ -51,6 +52,7 @@
       }
   
       &__action-buttons {
+        margin-top: 20px;
         display: flex;
         justify-content: space-between;
   
