fech: cart component fully completed

--- a/src/styles/utils/font.scss
+++ b/src/styles/utils/font.scss
@@ -177,9 +177,9 @@
 
 @mixin cart-item-attribute-title {
   font-family: "Raleway";
-  font-style: "Light";
+  font-style: "Medium";
   font-size: 15px;
-  font-weight: 300;
+  font-weight: 500;
   line-height: 29px;
   letter-spacing: 0px;
   text-align: left;
