--- a/src/styles/components/cart-item.scss
+++ b/src/styles/components/cart-item.scss
@@ -4,14 +4,22 @@
   display: flex;
   justify-content: space-between;
   margin-bottom: 25px;
+  padding-top: 25px;
+  border-top: 1px solid #E5E5E5;
 
   &__info {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 
-    &__brand, &__name {
-      @include card-title;
+    &__titles {
+      &__brand {
+        @include card-bold-title
+      }
+  
+      &__name {
+        @include card-title;
+      }
     }
 
     &__price {
@@ -36,18 +44,13 @@
         width: 25px;
         height: 25px;
         border: 2px solid $text-primary;
-        user-select: none;
-
-        &:hover {
-          cursor: pointer;
-        }
       }
 
       &__amount {
         display: flex;
         align-items: center;
         justify-content: center;
-        font-size: 20px;
+        font-size: 25px;
         width: 25px;
         height: 25px;
       }
