fech: adding product with default attributes by click on cart in product cart

--- a/src/styles/components/finally-cart-preview.scss
+++ b/src/styles/components/finally-cart-preview.scss
@@ -63,6 +63,11 @@
           cursor: pointer;
         }
       }
+
+      &__previos-picture {
+        margin-right: 10px;
+        transform: rotate(180deg);
+      }
     }
   }
 }
