--- a/src/styles/components/cart-item.scss
+++ b/src/styles/components/cart-item.scss
@@ -44,6 +44,10 @@
         width: 25px;
         height: 25px;
         border: 2px solid $text-primary;
+
+        &:hover {
+          @include default-hover;
+        }
       }
 
       &__amount {
