refactor:added styles for categories items

--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -40,6 +40,11 @@
         display: none;
       }
     }
+    
+    &__item-container input[type="radio"]:checked + label {
+      color: #5ECE7B;
+      border-bottom: 2px solid #5ECE7B;
+    }
   }
   
   &__actions {
